# testowanie_oprogramowania

./: CMakeLists.txt  compile.sh
projekt/: CMakeLists.txt
test/: CMakeLists.txt  test.cpp
